# ngdev-laravel

./: .gitignore  Cargo.toml  README.md  arquitetura-contexts.instructions.md  install.ps1  install.sh  ngdev.md  package-lock.json
benches/: generators.rs
frontend-installer/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-installer/src/: main.ts  styles.css
manager/: Cargo.toml  tauri.conf.json
manager/capabilities/: default.json
manager/src/: commands.rs  lib.rs  main.rs
src/: assets.rs  cli.rs  lib.rs  main.rs
src/flows/: deps.rs  mod.rs
src/flows/artesanal/: mod.rs
src/flows/artesanal/controller/: generator.rs  mod.rs  templates.rs
src/flows/artesanal/migration/: generator.rs  mod.rs  templates.rs
src/flows/artesanal/model/: generator.rs  mod.rs  templates.rs
src/flows/artesanal/service/: generator.rs  mod.rs  templates.rs
src/flows/ci4_backend/: generator.rs  mod.rs  templates.rs
src/flows/context/: generator.rs  mod.rs  templates.rs
src/flows/docker/: generator.rs  mod.rs  templates.rs
src/flows/erp_estoque/: generator.rs  mod.rs  templates.rs
src/flows/erp_logistica/: generator.rs  mod.rs  templates.rs
src/flows/estoque/: generator.rs  mod.rs  templates.rs
src/flows/landing_ci4/: generator.rs  mod.rs
src/flows/landing_page/: generator.rs  mod.rs  templates.rs  templates_saas.rs
src/flows/logistica_reversa/: generator.rs  mod.rs
src/flows/pdv/: generator.rs  mod.rs
src/generators/: context.rs  controller.rs  docker.rs  estoque.rs  logistica_reversa.rs  migration.rs  mod.rs  model.rs  pdv.rs
src/templates/: context.rs  docker.rs  logistica_reversa.rs  migration.rs  mod.rs  pdv.rs
