[workspace]
members  = [".", "manager"]
resolver = "2"

[package]
name = "ngdev-laravel"
version = "0.1.0"
edition = "2021"
description = "Ng Development - Laravel PHP code generator"

[profile.dist]
inherits = "release"
strip = true
lto = true
codegen-units = 1

[build]
target = "x86_64-unknown-linux-musl"

[[bin]]
name = "ngdev"
path = "src/main.rs"

[lib]
name = "ngdev_laravel"
path = "src/lib.rs"

[dependencies]
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heck = "0.5"
anyhow = "1"
dialoguer = "0.11"
console = "0.15"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "generators"
harness = false
