[workspace]
members  = [".", "manager"]
resolver = "2"

[package]
name = "caronte-laravel"
version = "0.1.0"
edition = "2021"
description = "Caronte — Laravel PHP code generator"

[profile.release]
strip = true
lto   = true
codegen-units = 1

[profile.dist]
inherits = "release"

[[bin]]
name = "caronte"
path = "src/main.rs"

[lib]
name = "caronte_laravel"
path = "src/lib.rs"

[dependencies]
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heck = "0.5"
anyhow = "1"
dialoguer = "0.11"
console = "0.15"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "generators"
harness = false
