[package]
name    = "ngdev-manager"
version = "0.1.0"
edition = "2021"
description = "ngdev GUI installer and manager (Tauri)"

[lib]
name       = "ngdev_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
ngdev-laravel      = { path = ".." }
